updating competition name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <button id="startTimerButton" style="position: fixed; bottom: 20px; left: 20px;" onclick="startTimer()">Start Timer</button>
 <button id="endTimerButton" style="display: none; position: fixed; bottom: 20px; right: 20px;" onclick="endTimerAndGenerateCSV()">End Timer & Generate CSV</button>
-    <h1>Competition Challenge</h1>
+    <h1>Great COde Off!</h1>
     <div id="timer">Time left: <span id="time">120:00</span></div>
     <h2 id="challengeQuestion"></h2>
         <div id="inputFields" style="display: none;">
